# kuberca

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  index.html  release-please-config.json
agent/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  main.go  pyproject.toml  release-please-config.json
agent/.githooks/: pre-commit
agent/.github/workflows/: ci-pr.yaml  ci.yaml  release-please.yaml
agent/agent/: CHANGELOG.md
agent/app/: main.py
agent/app/api/: analysis.py  chat.py  config.py  health.py
agent/app/clients/: conversation_manager.py  k8s.py  loki.py  prometheus.py  session_repository.py  strands_agent.py  strands_patch.py  summary_store.py  tempo.py
agent/app/core/: concurrency.py  config.py  dependencies.py  log_sanitize.py  logging.py  masking.py
agent/app/models/: k8s.py
agent/docs/: openapi.json
agent/scripts/: curl-test-crashloop.sh  curl-test-imagepull.sh  curl-test-oomkilled.sh  export_openapi.py
agent/tests/: conftest.py  test_analysis_service.py  test_analyze_endpoint.py  test_chat_service.py  test_concurrency.py  test_config.py  test_k8s_client.py  test_k8s_manifest_tools.py  test_llm_provider_factory.py  test_log_sanitize.py  test_loki_client.py  test_masking.py  test_prometheus_client.py  test_retry_stop.py  test_session_repository.py  test_strands_agent_recovery.py  test_strands_tools.py  test_tempo_client.py  test_tool_logging.py
api/: index.html
(+321 files in other folders)
